# linter

./: Cargo.toml  Notes.md  README.md  ROADMAP.md  dist-workspace.toml  linter_config.yaml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  pr.yml  release-plz.yml  release.yml
examples/: hcl_serde.rs
lints/: open_api.yaml  open_api_lints.yaml
plugin_core/: Cargo.toml
plugin_core/src/: errors.rs  lib.rs  lint.rs  utils.rs
plugin_openapi/: Cargo.toml
plugin_openapi/src/: adapter_impl.rs  entrypoints.rs  lib.rs  utils.rs
plugin_terraform/: Cargo.toml
plugin_terraform/src/: adapter_impl.rs  lib.rs  schema.graphql  utils.rs
queries/hcl/: resource.ron
queries/hn/: front_page_stories_with_links.ron  jobs_in_top_50.ron
queries/openapi/: get_methods.ron  info.ron
schemas/: files.graphql  hacker_news.graphql  hcl.graphql  openapi.graphql
src/: compare_main.rs  hcl_main.rs  hn_main.rs  lib.rs  main.rs  oa_main.rs  open_api_adapter.rs  plugin_config.rs  util.rs  wasm_main.rs
src/config/: model.rs
src/filesystem/adapter/: adapter_impl.rs  edges.rs  entrypoints.rs  mod.rs  properties.rs
src/hacker_news/adapter/: adapter_impl.rs  edges.rs  entrypoints.rs  mod.rs  properties.rs  schema.graphql  tests.rs  vertex.rs
src/hcl/adapter/: adapter_impl.rs  edges.rs  entrypoints.rs  mod.rs  utils.rs
src/openapi/: mod.rs
src/openapi/adapter/: adapter_impl.rs  edges.rs  entrypoints.rs  mod.rs  properties.rs  schema.graphql  tests.rs  utils.rs  vertex.rs
test_files/terraform/: api_gateway_config.json  api_gateway_config.tf  api_gateway_resources.json  api_gateway_resources.tf  certificate.json  certificate.tf  data.json  data.tf  main.json  main.tf  outputs.json  outputs.tf  permissions.json  permissions.tf  route53.json  variables.json  variables.tf
wix/: main.wxs
