[package]
name = "linter"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ZimboPro/hcl-openapi-lints"
description = "A linter for HCL and OpenAPI files"
authors = ["Leslie de Jager"]
readme = "README.md"
license = "Apache-2.0"

[package.metadata.wix]
upgrade-guid = "3B2D2988-5EF2-4262-BDCD-7B0F73D2390E"
path-guid = "33CFD5D6-ECE3-4A1C-A68D-CBA51FF0CAD3"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
extism = "1.2.0"
figment = { version = "0.10.15", features = ["env", "yaml"] }
hcl-rs = "0.16.7"
merge-yaml-hash = "0.3.0"
openapiv3 = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
sha256 = "1.5.0"
simplelog = { version = "0.12.2", features = ["paris"] }
trustfall = "0.7.1"
plugin_core = { path = "./plugin_core" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = ["plugin_core", "plugin_openapi"]
# panic = "abort"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

# Uncomment if want to use a custom CI configuration
# # Ignore out-of-date contents
# allow-dirty = ["ci"]
