[package]
name = "linter"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/ZimboPro/hcl-openapi-lints"
description = "A linter for HCL and OpenAPI files"
authors = ["Leslie de Jager"]
readme = "README.md"
license = "Apache-2.0"

[package.metadata.wix]
upgrade-guid = "3B2D2988-5EF2-4262-BDCD-7B0F73D2390E"
path-guid = "33CFD5D6-ECE3-4A1C-A68D-CBA51FF0CAD3"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
extism = { workspace = true }
figment = { workspace = true, features = ["env", "yaml"] }
hcl-rs = { workspace = true }
yaml-hash = { workspace = true }
openapiv3 = { workspace = true }
plugin_core = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha256 = { workspace = true }
simplelog = { workspace = true, features = ["paris"] }
trustfall = { workspace = true }
yaml-rust2 = { workspace = true }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = ["plugin_core", "plugin_openapi", "plugin_terraform"]
# panic = "abort"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[workspace.dependencies]
anyhow = "1.0.86"
clap = "4.6"
extism = "1.21.0"
extism-pdk = "1.4.1"
figment = "0.10.19"
hcl-rs = "0.19"
openapiv3 = "2.2"
plugin_core = { path = "plugin_core" }
reqwest = "0.13"
serde = "1.0.209"
serde_json = "1.0.127"
serde_yaml = "0.9.34"
sha256 = "1.6"
simplelog = "0.12.2"
thiserror = "2"
trustfall = "0.8"
yaml-hash = "0.6"
yaml-rust2 = "0.11"

# Uncomment if want to use a custom CI configuration
# # Ignore out-of-date contents
# allow-dirty = ["ci"]
