[package]
name = "plugin_openapi"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "1.1.0"
yaml-hash = "=0.3.0"
openapiv3 = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.118"
serde_yaml = "0.9.32"
trustfall = "0.7.1"
plugin_core = { path = "../plugin_core" }
