[package]
name = "plugin_openapi"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = { workspace = true }
yaml-hash = { workspace = true }
openapiv3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
trustfall = { workspace = true }
plugin_core = { workspace = true }
