[package]
name = "plugin_terraform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
extism-pdk = "1.1.0"
hcl-rs = "0.16.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.115"
trustfall = "0.7.1"
plugin_core = { path = "../plugin_core" }
